# anthropic-gaia-agent

./: .env.example  .gitignore  README.md  find_pie_menu.py  pyproject.toml  read_parquet.py  read_parquet_pyarrow.py  search_pie_menu.py  simple_search.py
src/: __init__.py  agent.py  cli.py  config.py
src/benchmark/: __init__.py  evaluator.py  gaia_loader.py  runner.py
src/planning/: __init__.py  planner.py  state.py
src/tools/: __init__.py  e2b_executor.py  file_handler.py  rag.py  web_search.py
tests/: conftest.py  test_agent.py  test_benchmark.py  test_tools.py
